<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
        android:id="@+id/filter"
        android:title="@string/project_act_toolbar_memu_filter"
        android:icon="@drawable/filter"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/saveAll_item"
        android:title="@string/project_act_toolbar_memu_save"
        android:icon="@drawable/content_save_all"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/searchIni_item"
        android:title="@string/project_act_toolbar_memu_search"
       
        />
   
    <item
        android:id="@+id/export"
        android:title="@string/project_act_toolbar_memu_export"
        
        />
   <item
        android:id="@+id/setting"
        android:title="@string/project_act_toolbar_memu_setting"
        
        />
</menu>
