<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_margin="13dp"
         android:orientation="vertical">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_vertical"
             android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="1"
                 android:id="@+id/tv_dir_align"
                 android:text="@string/project_act_swipe_menu_info_dialog_directory" />

            <com.google.android.material.textview.MaterialTextView
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_dir_align"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="3"
                 android:id="@+id/tv_dir" />

        </LinearLayout>

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_vertical"
             android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="parent"
                 android:layout_weight="1"
                 android:id="@+id/tv_size_align"
                 android:text="@string/project_act_swipe_menu_info_dialog_size" />

            <com.google.android.material.textview.MaterialTextView
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_size_align"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="3"
                 android:id="@+id/tv_size" />

        </LinearLayout>

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_vertical"
             android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_size_align"
                 android:layout_weight="1"
                 android:id="@+id/tv_time_align"
                 android:text="@string/project_act_swipe_menu_info_dialog_modify_date" />

            <com.google.android.material.textview.MaterialTextView
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_time_align"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="3"
                 android:id="@+id/tv_time" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>